<resources>
    <string name="app_name">DzienniczekSeniora</string>
    <string name="addNote">DODAJ NOTATKĘ</string>
    <string name="weight">WAGA</string>
    <string name="update">UAKTUALNIJ \n PRZEDZIAŁ</string>
    <string name="newValue">NOWY PRZEDZIAŁ</string>
    <string name="temperature">TEMPERATURA</string>
    <string name="updateDataText">Uakyalnij Dane</string>
    <string name="pressure">CIŚNIENIE</string>
    <string name="glucose">POZIOM CUKRU</string>
    <string name="height">WZROST</string>
    <string name="visit">WIZYTA U LEKARZA</string>
    <string name="other">INNE</string>
    <string name="result">Wyniki: </string>
    <string name="resultButton">WYŚWIETL WYNIKI</string>
    <string name="addVisit">DODAJ WIZYTĘ</string>
    <string name="viewNote">WYŚWIETL DANE</string>
    <string name="addTime">Dodaj godzinę</string>
    <string name="save">Zapisz</string>
    <string name="addInformations">Dodatkowe informacje</string>
    <string name="time">Godzina: </string>
    <string name="wrongDataInput">Błędnie wprowadzone dane. </string>
    <string name="resetValueButtonName">RESETUJ PRZEDZIAŁ </string>

</resources>
