<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@mipmap/tlo_drewno_background"
    tools:context=".ResultFrom30Days">

    <android.support.v7.widget.GridLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="20dp"
        app:columnCount="1"
        app:rowCount="4">

        <Button
            android:background="@drawable/rounded_button"
            android:id="@+id/weightChart"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_margin="20dp"
            android:text="@string/weight"
            android:textColor="@android:color/black"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_columnWeight="1"
            app:layout_gravity="fill"
            app:layout_rowWeight="1" />

        <Button
            android:background="@drawable/rounded_button"
            android:id="@+id/temperatureChart"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:text="@string/temperature"
            android:textColor="@android:color/black"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_columnWeight="2"
            app:layout_gravity="fill"
            app:layout_rowWeight="1" />

        <Button
            android:background="@drawable/rounded_button"
            android:id="@+id/glucoseChart"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="20dp"
            android:layout_marginRight="20dp"
            android:text="@string/glucose"
            android:textColor="@android:color/black"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_columnWeight="3"
            app:layout_gravity="fill"
            app:layout_rowWeight="1" />

        <Button
            android:background="@drawable/rounded_button"
            android:id="@+id/pressureChart"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_margin="20dp"
            android:text="@string/pressure"
            android:textColor="@android:color/black"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_columnWeight="4"
            app:layout_gravity="fill"
            app:layout_rowWeight="1" />
    </android.support.v7.widget.GridLayout>
</android.support.constraint.ConstraintLayout>