<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AddVisit">

    <android.support.v7.widget.GridLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:columnCount="1"
        app:rowCount="4">

        <TextView
            android:id="@+id/dataView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp"
            android:text="Data"
            android:textAlignment="center"
            android:textSize="24sp"
            app:layout_columnWeight="1"
            app:layout_gravity="fill"
            app:layout_rowWeight="1" />

        <Button
            android:id="@+id/addTime"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/addTime"
            android:textSize="24sp"
            app:layout_columnWeight="1"
            app:layout_gravity="fill"
            app:layout_rowWeight="2" />

        <TextView
            android:id="@+id/timeTextView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:enabled="false"
            android:focusable="false"
            android:layout_marginTop="20dp"
            android:textAlignment="center"
            android:textSize="24sp"
            app:layout_columnWeight="1"
            app:layout_gravity="fill"
            app:layout_rowWeight="3" />

        <EditText
            android:id="@+id/editText3"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:ems="10"
            android:inputType="textPersonName"
            android:text="@string/addInformations"
            android:textAlignment="center"
            android:textSize="24sp"
            app:layout_columnWeight="1"
            app:layout_gravity="fill"
            app:layout_rowWeight="4" />

        <Button
            android:id="@+id/saveButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="40dp"
            android:layout_marginTop="40dp"
            android:layout_marginRight="40dp"
            android:layout_marginBottom="10dp"
            android:gravity="center"
            android:text="@string/save"
            android:textSize="24sp"
            app:layout_columnWeight="1"
            app:layout_rowWeight="5" />

    </android.support.v7.widget.GridLayout>
</android.support.design.widget.CoordinatorLayout>